2001-02-05  Frank Ch. Eigler  <fche@redhat.com>

	* Makefile.am (sid_LDFLAGS): Add export-symbols-regex parameter to
	shrink the list of static symbols in the dlpreload case.
	* Makefile.in: Regenerated.

2000-11-16  Frank Ch. Eigler  <fche@redhat.com>

	* Makefile.am (AM_CXXFLAGS): Add -DSID_STATIC conditionally.
	* mainDynamic.cxx (lt_preloaded_symbols,!SID_STATIC): Make stub table.
	* Makefile.in: Regenerated.

2000-11-15  Jeff Johnston  <jjohnstn@redhat.com>

	* configure: Regenerated.
	* aclocal.m4: Ditto.
	* Makefile.in: Ditto.

2000-07-26  Frank Ch. Eigler  <fche@redhat.com>

	* mainDynamic.cxx (main): Print usage message if sid is invoked with
	no arguments.

2000-07-26  Frank Ch. Eigler  <fche@redhat.com>

	* configure.in: Define SID_STATIC automake var if --disable-shared.
	* Makefile.am: If SID_STATIC, --dlpreopen all nearby component
	libraries when linking sid executable.
	* configure, Makefile.in: Regenerated.

2000-05-22  Ben Elliston  <bje@redhat.com>

	* Makefile.in: Regenerate.

2000-02-08  Frank Ch. Eigler  <fche@redhat.com>

	* mainDynamic.cxx (main): Delete cfgroot even on __CYGWIN__.

2000-01-12  Frank Ch. Eigler  <fche@cygnus.com>

	* mainDynamic.cxx (usage): New function.
	(main): Use getopt.  Process several new command line options.
	* configure.in: Look for getopt.h.
	* configure, config.in: Regenerated.

1999-12-29  Frank Ch. Eigler  <fche@cygnus.com>

	* configure.in: Don't look redundantly for libstdc++.
	* configure, config.in: Regenerated.

1999-11-23  Frank Ch. Eigler  <fche@cygnus.com>

	* mainDynamic.cxx (sid_{pre,post}_{configure,run}): New debugging
	hook functions.
	(main): Call them at the appropriate points.  Drive output pins with
	sentinel values.
	(sid_breakpoint): Zap.

1999-10-19  Frank Ch. Eigler  <fche@cygnus.com>

	* Makefile.in: Regenerated.
	* configure: Regenerated.

1999-09-16  Frank Ch. Eigler  <fche@cygnus.com>

	* Makefile.am (ACLOCAL_AMFLAGS): Define.
	* Makefile.in: Regenerated.
	* aclocal.m4: Regenerated.